// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Block Bulleted code block 1`] = `
[
  {
    "content": "function () {
  alert(document.location.href)
  console.log("hello")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 1,
    "type": "codeBlock",
  },
]
`;

exports[`Code Block Code block with bullet 1`] = `
[
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "Bullet",
        "text": "Bullet",
        "type": "plain",
      },
    ],
    "type": "line",
  },
  {
    "content": "function () {
  alert(document.location.href)
  console.log("hello")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 1,
    "type": "codeBlock",
  },
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "Bullet",
        "text": "Bullet",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`Code Block Consecutive code blocks 1`] = `
[
  {
    "content": "function () {
  alert(document.location.href)
  console.log("hello")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
  {
    "content": "function () {
  alert(document.location.href)
  console.log("hello")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
]
`;

exports[`Code Block Simple code block 1`] = `
[
  {
    "content": "function () {
  alert(document.location.href)
  console.log("hello")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
]
`;
